Atualizações do site netshoes

--- a/index2.html
+++ b/index2.html
@@ -10,36 +10,61 @@
     <body>
         <h1>Aula de Sites Responsivos</h1> <hr> <br>
         <div class="container">
-            <div class="cabecalho">
-                <div class="netshoes">
+
+            <!-- navMenu -->
+            <div id="navMenu">
+                <div id="netshoes">
                     <ul>
-                        <li><a href="#">Netshoes</a></li>
+                        <li><a href="#">netshoes</a></li>
                     </ul>
                 </div>
-                <div class="opcoes">
+
+                <div id="opcoes">
                     <ul>
-                        <li><a href="#">Lista de desejos</a></li>
-                        <li><a style="margin-right: 5px;" href="#">Sair</a></li>
+                        <li><a href="#">Lista de Desejos</a></li>
+                        <li><a href="#">Sair</a></li>
                     </ul>
                 </div>
             </div>
 
-            <div class="itens1">
-                <div id="bicicleta">
-                    <a id="bicicleta" href="#">
-                        <img style="height: 150px" src="img/imagens2/bicicleta.jpg"Bicicleta>
-                    </a>
+            <!-- itens1 -->
+            <div id="itens1">
+                <div class="produto1">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/bicicleta.png"></a>
                 </div>
-                <a id="eletrônicos" href="#"><img style="height: 150px" src="img/imagens2/eletronicos.jpg"Eletrônicos></a>
-                <a id="cuidadosDiarios" href="#"><img style="height: 150px" src="img/imagens2/cuidadosDiarios.jpg"Cuidados dia-a-dia></a>
-                <a id="vitaminas" href="#"><img style="height: 150px" src="img/imagens2/vitaminas.jpg"Vitaminas></a>
-                <a id="Equipamentos" href="#"><img style="height: 150px" src="img/imagens2/equipamentosFitness.jpg"Equipamentos Fitnes></a>
-                <a id="games" href="#"><img style="height: 150px" src="img/imagens2/games.jpg"Games></a>
+                <div class="produto2">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/eletronicos.png"></a>
+                </div>
+                <div class="produto3">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/cuidadosDiarios.png"></a>
+                </div>
+                <div class="produto4">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/vitaminas.png"></a>
+                </div>
+                <div class="produto5">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/equipamentosFitness.png"></a>
+                </div>
+                <div class="produto6">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/games.png"></a>
+                </div>
             </div>
 
-            <h2 style="text-transform: uppercase; margin-top: 30px; margin-left: 35px;">Mais procurados em departamentos do seu interesse</h2>
+            <!-- texto -->
+            <div id="texto">
+                <h2>Mais procurados em departamentos do seu interesse</h2>
+            </div>
 
-            <div class="itens2"></div>
+            <!-- itens2 -->
+            <div id="itens2">
+                <div class="p1"></div>
+                <div class="p2"></div>
+                <div class="p3"></div>
+                <div class="p4"></div>
+                <div class="p5"></div>
+                <div class="p6"></div>
+                <div class="p7"></div>
+                <div class="p8"></div>
+            </div>
         </div>
     </body>
 </html>
