--- a/index2.html
+++ b/index2.html
@@ -56,14 +56,47 @@
 
             <!-- itens2 -->
             <div id="itens2">
-                <div class="p1"></div>
-                <div class="p2"></div>
-                <div class="p3"></div>
-                <div class="p4"></div>
-                <div class="p5"></div>
-                <div class="p6"></div>
-                <div class="p7"></div>
-                <div class="p8"></div>
+                <div class="p1">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/tenis.png"></a>
+                    <p class="nomeProduto"> Tênis Nike Downshifter</p>
+                    <p class="preço">R$ 199,99</p>
+                </div>
+                <div class="p2">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/bermudaNike.png"></a>
+                    <p class="nomeProduto"> Bermuda Nike</p>
+                    <p class="preço">R$ 69,99</p>
+                </div>
+                <div class="p3">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/tenisAdidas.png"></a>
+                    <p class="nomeProduto"> Tênis Adidas Advantage</p>
+                    <p class="preço">R$ 99,99</p>
+                </div>
+                <div class="p4">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/tenisCorrida.png"></a>
+                    <p class="nomeProduto"> Tênis Asics Blocker</p>
+                    <p class="preço">R$ 139,99</p>
+                </div>
+
+                <div class="p5">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/camisaFlamengo.png"></a>
+                    <p class="nomeProduto"> Camisa Flamengo III</p>
+                    <p class="preço">R$ 119,99</p>
+                </div>
+                <div class="p6">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/tenisAdidas2.png"></a>
+                    <p class="nomeProduto"> Tênis Adidas Careracer</p>
+                    <p class="preço">R$ 149,99</p>
+                </div>
+                <div class="p7">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/kitCamiseta.png"></a>
+                    <p class="nomeProduto"> kit Camiseta c/ 5 peças</p>
+                    <p class="preço">R$ 79,99</p>
+                </div>
+                <div class="p8">
+                    <a href="#"><img style="height: 150px;" src="img/imagens2/camisaDrift.png"></a>
+                    <p class="nomeProduto"> Camisa Nike Dri-Fit</p>
+                    <p class="preço">R$ 65,99</p>
+                </div>
             </div>
         </div>
     </body>
